# Pinhole-Camera-Model

./: CMakeLists.txt  LICANSE  LICENSE  README.md  main.cpp
include/: CameraModel.hpp  MeshLoader.hpp  OpenCVVisualizer.hpp  OrbitController.hpp  Renderer.hpp  Visualizer.hpp
src/: CameraModel.cpp  MeshLoader.cpp  Renderer.cpp
